@@ -9,6 +9,7 @@
    * using a configuration wizard
    * saving tunnel settings
    * installing a browser without a market app
+   * rotating the screen while using the built-in browser
  * Update Firefox browser config instructions for Firefox Quantum
  * Translation updates
 
